--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div> 
                     <div class="drawer-side">
                       <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-                      <ul id="savedMemeCollectionInSideBar" class="flex items-start menu p-4 gap-3 w-80 min-h-full bg--50 text-black font-bold">
+                      <ul id="savedMemeCollectionInSideBar" class="flex items-start menu p-4 gap-3 w-80 min-h-full bg--50 text-slate-300 font-bold">
                         <div class="h-16 w-72 border-b-2 border-slate-300 text-center flex flex-col justify-center">
                           <p class="text-xl font-bold text-blue-400">Femes | Favourite Memes </p>
                         </div>
